Missing relation in scene depsgraph: ComponentKey(SCScene, SEQUENCER) →ComponentKey(SCScene, AUDIO) #78920

Closed
opened 2020-07-14 16:28:47 +02:00 by Sybren A. Stüvel · 5 comments

System Information
Operating system: Linux-5.3.0-62-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.36.06

Blender Version
Broken: 2.83 and 2.90 master @ c8a62e4f50
Working: 2.82

Short description of error
Having a sound strip in the VSE causes a missing relation error to be logged on the console.

Exact steps for others to reproduce the error
striptest.blend

  • Open the attached blend file. It contains one strip. Having the referenced audio file is not necessary.
  • Check the terminal.
Read blend: striptest.blend
add_relation(Sequencer -> Audio) - Failed, but op_from (ComponentKey(SCScene, SEQUENCER)) was ok
add_relation(Sequencer -> Audio) - Could not find op_to (ComponentKey(SCScene, AUDIO))
**System Information** Operating system: Linux-5.3.0-62-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 450.36.06 **Blender Version** Broken: 2.83 and 2.90 master @ c8a62e4f50 Working: 2.82 **Short description of error** Having a sound strip in the VSE causes a missing relation error to be logged on the console. **Exact steps for others to reproduce the error** [striptest.blend](https://archive.blender.org/developer/F8693754/striptest.blend) - Open the attached blend file. It contains one strip. Having the referenced audio file is not necessary. - Check the terminal. ``` Read blend: striptest.blend add_relation(Sequencer -> Audio) - Failed, but op_from (ComponentKey(SCScene, SEQUENCER)) was ok add_relation(Sequencer -> Audio) - Could not find op_to (ComponentKey(SCScene, AUDIO)) ```
Poster
Collaborator

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren
Poster
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Sybren A. Stüvel self-assigned this 2020-07-14 16:29:22 +02:00

This issue was referenced by 3f23de9a3f

This issue was referenced by 3f23de9a3fc5cd78174237fb0b5a433032a8042c

This issue was referenced by 065a00ee3e

This issue was referenced by 065a00ee3e6668172faae5a72027de8b1bca9d77
Poster
Collaborator

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.90 milestone 2023-02-08 16:26:16 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78920
There is no content yet.