source/blender/depsgraph/intern/node/deg_node_operation.h
@@ -61,6 +61,7 @@ enum class OperationCode {
 
   /* Scene related. ------------------------------------------------------- */
   SCENE_EVAL,
+  AUDIO_ENTRY,
   AUDIO_VOLUME,
 
   /* Object related. ------------------------------------------------------ */
